RESOLVED FIXED127892
REGRESSION: WebKit2.PageLoadBasic API test is failing
https://bugs.webkit.org/show_bug.cgi?id=127892
Summary REGRESSION: WebKit2.PageLoadBasic API test is failing
Alexey Proskuryakov
Reported 2014-01-30 00:13:55 PST
WebKit2.PageLoadBasic is failing on Mountain Lion: [ RUN ] WebKit2.PageLoadBasic /Volumes/Data/slave/mountainlion-debug/build/Tools/TestWebKitAPI/Tests/WebKit2/PageLoadBasic.cpp:149: Failure Value of: WKURLIsEqual(activeUrl.get(), url.get()) Actual: false Expected: true It started to fail in <http://trac.webkit.org/changeset/163037>, although the failure mode has changed since then, so it's possible that more brokenness was introduced while everything was crashing. Anders, could you please take a look soon?
Attachments
Patch (3.72 KB, patch)
2014-01-31 09:08 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2014-01-30 11:17:26 PST
Will look at this when I get home to my ML machine.
Alexey Proskuryakov
Comment 2 2014-01-30 11:35:48 PST
What should we do in the meanwhile? Bots are red, and it's the nastiest kind of failure, because it prevents even seeing in a popover what layout tests are failing.
Alexey Proskuryakov
Comment 3 2014-01-30 17:06:54 PST
*** Bug 127934 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 4 2014-01-30 17:07:23 PST
Andy disabled the test in <http://trac.webkit.org/changeset/163100>.
Anders Carlsson
Comment 5 2014-01-31 09:08:35 PST
Anders Carlsson
Comment 6 2014-01-31 09:22:09 PST
Alexey Proskuryakov
Comment 7 2014-01-31 09:24:17 PST
Comment on attachment 222821 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=222821&action=review > Tools/TestWebKitAPI/Tests/WebKit2/PageLoadBasic.cpp:111 > // FIXME: http://webkit.org/b/127934 REGRESSION (r163037): WebKit2.PageLoadBasic API test failing on Mountain Lion Can you please remove this line too?
Note You need to log in before you can comment on or make changes to this bug.