REGRESSION: WebKit2.PageLoadBasic API test is failing https://bugs.webkit.org/show_bug.cgi?id=127892

Reviewed by Dan Bernstein.

Source/WebKit2:

On Mountain Lion, URLs returned by -[NSBundle URLForResource:withExtension:subdirectory] include
localhost as the hostname, but WebCore::URL normalizes those URLs and removes the host name.

Because of this, URLs created by WKURLCreateWithCFURL won't be equal to urls passed through
the WebCore::URL constructor. Change WKURLIsEqual to compare the normalized URLs.

* Shared/API/c/WKURL.cpp:
(WKURLIsEqual):
* Shared/APIURL.h:
(API::URL::equals):
(API::URL::url):

Tools:

Re-enable test.

* TestWebKitAPI/Tests/WebKit2/PageLoadBasic.cpp:

Canonical link: https://commits.webkit.org/145994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163173 268f45cc-cd09-0410-ab3c-d52691b4dbfc